--- a/visualization_quickstart.ipynb
+++ b/visualization_quickstart.ipynb
@@ -61,7 +61,7 @@
     "    Displays all images. The assigned label is red if it does not match the correct label and is black otherwise.\n",
     "    \"\"\"\n",
     "    fig = plt.figure()\n",
-    "    for i in xrange(num_rows*num_columns):\n",
+    "    for i in range(num_rows*num_columns):\n",
     "        ax = fig.add_subplot(num_rows,num_columns,i+1)\n",
     "        image = np.reshape(images[i], [28, 28])\n",
     "        assigned_label = assigned_labels[i]\n",
@@ -145,7 +145,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -157,7 +159,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -168,5 +170,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
